--- a/index.html
+++ b/index.html
@@ -14,6 +14,97 @@
   </head>
   <body>
     <h1>Tokopaedi</h1>
+    <div class="container">
+      <div class="left-side">
+        <div class="barang">
+          <img width="200" src="./images/produk1.jpg" alt="gambar 1" />
+          <div class="information">
+            <div class="deskripsi">
+              <strong class="nama">Denmark Backpack</strong>
+              <p>One Size</p>
+              <p>Cream</p>
+            </div>
+            <div class="tombol">
+              <button class="kurang">-</button>
+              <input class="total" type="text" value="0">
+              <button class="tambah">+</button>             
+          </div>
+          <div class="div-harga">
+          <span>$</span><strong class="harga">50</strong>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="left-side">
+        <div class="barang">
+          <img width="200" src="./images/produk2.jpeg" alt="gambar 2" />
+          <div class="information">
+            <div class="deskripsi">
+              <strong class="nama">Casual Backpack</strong>
+              <p>One Size</p>
+              <p>Black</p>
+            </div>
+            <div class="tombol">
+              <button class="kurang">-</button>
+              <input class="total" type="text" value="0">
+              <button class="tambah">+</button>            
+          </div>
+          <div class="div-harga">
+          <span>$</span><strong class="harga">85</strong>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="left-side">
+        <div class="barang">
+          <img width="200" src="./images/produk3.png" alt="gambar 3" />
+          <div class="information">
+            <div class="deskripsi">
+              <strong class="nama">Man Backpack</strong>
+              <p>One Size</p>
+              <p>Grey</p>
+            </div>
+            <div class="tombol">
+              <button class="kurang">-</button>
+              <input class="total" type="text" value="0">
+              <button class="tambah">+</button>
+              
+          </div>
+          <div class="div-harga">
+          <span>$</span><strong class="harga">150</strong>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="left-side">
+        <div class="barang">
+          <img width="200" src="./images/produk4.jpg" alt="gambar 4" />
+          <div class="information">
+            <div class="deskripsi">
+              <strong class="nama">Women Backpack</strong>
+              <p>One Size</p>
+              <p>Pink</p>
+            </div>
+            <div class="tombol">
+              <button class="kurang">-</button>
+              <input class="total" type="text" value="0">
+              <button class="tambah">+</button>
+              
+          </div>
+          <div class="div-harga">
+          <span>$</span><strong class="harga">60</strong>
+        </div>
+      </div>
+    </div>
+    <div class="right-side"></div>
+    <h2>Order Summary</h2>
+    <form action="#">
+      <input value="" type="text" placeholder="name" required />
+      <input value="" type="email" placeholder="Email" required />
+      <input value="" type="text" placeholder="Promo" required />
+      <button class="reset">Reset</button>
+      <button class="apply">Aplly</button>
+    </form>
   </body>
   <script src="./script/jquery-3.7.1.min.js"></script>
   <script src="./script/script.js"></script>
